# gestor-estoque

./: README.md  manage.py  pyproject.toml  requirements-dev.txt
gestor_estoque/: asgi.py  settings.py  urls.py  wsgi.py
produtos/: forms.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py
produtos/templates/produtos/: adicionar_embalagens.html  adicionar_local.html  listar_embalagens.html  listar_locais.html
templates/: base.html  index.html  menu.html
utils/: base_models.py
